--- a/Interview_API/src/main/resources/application.yml
+++ b/Interview_API/src/main/resources/application.yml
@@ -4,7 +4,7 @@ logging:
       hibernate: INFO
       springframework:
         web: DEBUG
-    root: ALL
+    root: warn
     
 ---
 cognito:
@@ -16,30 +16,41 @@ spring:
     active: ${DEPLOYMENT_STAGE}
   application:
     name: interview-service
-  
+  main:
+    allow-bean-definition-overriding: true
   datasource:
-    driverClassName: org.postgresql.Driver
-    initialization-mode: NEVER
-    password: ${DB_PASSWORD}
-    url: jdbc:postgresql://${DB_URL}:5432/postgres
-    username: ${DB_USERNAME}
-    
+   driver-class-name: org.h2.Driver
+   platform: h2
+   url: jdbc:h2:mem:testDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;
+   username: sa
+   password:
+ # datasource:
+  #  driverClassName: org.postgresql.Driver
+  #  initialization-mode: NEVER
+  #  password: ${DB_PASSWORD}
+  #  url: jdbc:postgresql://${DB_URL}:5432/postgres
+  #  username: ${DB_USERNAME}
+  h2:
+    console:
+      enabled: true 
   jpa:
-    database-platform: org.hibernate.dialect.PostgreSQLDialect
-    generate-ddl: false
-    hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        default_schema: ${DB_SCHEMA}
+    database-platform: org.hibernate.dialect.H2Dialect
+  #  generate-ddl: false
+  #  hibernate:
+  #    ddl-auto: none
+  #  properties:
+  #    hibernate:
+  #      default_schema: ${DB_SCHEMA}
     show-sql: false  
+
+server:
+  port: 8091
 
 ---
 spring:
   profiles: dev
 
-server:
-  port: 8091
+
 
 eureka:
   client:
